[package]
name = "bot-simple-timer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
regex = "1.7.3"
tokio = { version = "1.27.0", features = ["full"] }
traq-ws-bot = { version = "0.1.2", features = ["openapi"] }

[features]
